# LibJR

./: .gitignore  CMakeLists.txt  meson.build  run-tests.sh
Cli/: ArgumentParser.cpp  ArgumentParser.h  ProgressBar.h  Terminal.h
Core/: Folder.cpp  Folder.h  Forward.h  Library.h  MappedFile.cpp  MappedFile.h  System.cpp  System.h  Thread.h  Threads.h  Workers.h
JR/: Atomic.h  Concepts.h  ConcurrentVector.h  Defer.h  Error.h  ErrorOr.h  Forward.h  Function.h  GuardDefer.h  ID.h  Keywords.h  Lock.h  Log.h  Maybe.h  MultiProducerQueue.h  Queue.h  SingleSplit.h  String.cpp  String.h  StringView.cpp  StringView.h  Time.h  Try.h  Types.h  Vector.h  View.h  null.h
Main/: Main.cpp  Main.h
Tests/: CMakeLists.txt  Test.h  run_tests.cpp
Tests/Cli/: ArgumentParser.cpp  ProgressBar.cpp
Tests/Core/: Folder.cpp  MappedFile.cpp  Thread.cpp  Workers.cpp
Tests/JR/: Queue.cpp  Vector.cpp
